# QuantEdge

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  docker-run.sh
.github/workflows/: cmake.yml
include/: MeanReversionStrategy.hpp  MomentumStrategy.hpp  PairsTrader.hpp  Statistics.hpp  StrategyBase.hpp
src/: MeanReversionStrategy.cpp  MomentumStrategy.cpp  PairsTrader.cpp  Statistics.cpp  main.cpp
test/: TestPairsTrader.cpp
